  same case.
- Fixed WMGetViewScreenPosition() to consider the window decorations.
- Added ability to enable/disable individual WMTableViewItems.
- Fixed textfields regarding interpretation of special keys with modifiers.
- Fixed some functions that accept a boolean flag as a paramater, to set only
  1 or 0 for the flag value, not the flag passed by the user.


Changes since wmaker 0.70.0:
............................

- added an internal strcasecmp() (only on systems where is not present)
- removed some redundant includes of ../src/config.h when wconfig.h is 
  included too
- removed a wsyserror() message when reading a property list from file
  (the programmer should decide if to give that message or just ignore).
- added a 'Bool recursive' flag to WMMergePLDictionaries()
- added WMSubtractPLDictionaries()


Changes since wmaker 0.65.0:
............................

- fixed problem with WINGs based apps exiting with a "X_RotateProperties"
  related error when text was selected in a textfiled.
- moved wstrdup(), wstrconcat() and wstrappend() from memory.c to string.c
- added property list handling code making libPropList unnecessary and
  obsolete. Backward compatibility is provided through the 
  WINGs/proplist-compat.h header file which has #defines from old libPropList
  function names to new function names with minimal changes. Read this
  header file and the NEWS file for more details about this subject.
- Renamed WMGetUDAllKeys() to WMGetUDKeys()


Changes since wmaker 0.64.0:
............................

- made programmatic scroller changes send notifications
- replaced WMSetBoxExpandsToParent with WMSetViewExpands...
- added WMGetLabelFont()
- added WMAddPersistentTimerHandler()
- Moved all internal handlers (timer, idle and input) to handlers.c
- simplified wevent.c and wutil.c.
- fixed handling of input with poll (was broken)
- fixed mem leak that occured when input handling was done with poll