@@ -15,6 +15,8 @@ Changes since wmaker 0.80.0:
 - Fixed textfields regarding interpretation of special keys with modifiers.
 - Fixed some functions that accept a boolean flag as a paramater, to set only
   1 or 0 for the flag value, not the flag passed by the user.
+- Added 2 functions to retrieve the default system fonts:
+  WMDefaultSystemFont(WMScreen *scr) and WMDefaultBoldSystemFont(WMScreen *scr)
 
 
 Changes since wmaker 0.70.0:
